--- a/styles.css
+++ b/styles.css
@@ -91,8 +91,7 @@
 
 body {
     display: grid;
-    justify-content: center;
-    align-content: center;
+    place-content: center;
     padding: clamp(1.25rem, 4.018vw + -1.241rem, 2.375rem)
         clamp(5.125rem, 16.741vw + -5.254rem, 9.813rem); /*top, bottom | left, right*/
     min-height: 100vh;
@@ -103,18 +102,18 @@ body {
 }
 
 #main-cont {
+    border: 2px solid;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     /*? the subtraction is to give space for the gap so that the container isn't overflowed */
-    grid-template-rows: calc(40.5% - 24px) calc(10% - 24px) calc(21.5% - 24px) 30%; /* row1 row2 row3 row4*/
+    grid-template-rows: calc(40% - 28px) calc(10% - 28px) calc(20% - 28px) 30%; /* row1 row2 row3 row4*/
     grid-template-areas:
         "area1 area2 area2 area3"
         "area1 area4 area5 area3"
         "area6 area4 area5 area3"
         "area6 area7 area8 area8";
-    gap: var(--spacing-24);
-    min-width: 920px;
-    max-width: 1200px;
+    gap: var(--spacing-28);
+    width: clamp(920px, 100%, 1200px);
     max-height: 900px;
 }
 
@@ -152,7 +151,6 @@ p {
 .item6,
 .item7 {
     align-content: space-between;
-    object-position: left bottom;
 }
 
 .item6 > img,
@@ -366,17 +364,21 @@ p {
 @media (max-width: 991px) {
     body {
         padding: 4vh 2vh;
-        justify-content: unset;
-        align-items: unset;
+        place-content: start;
     }
 
     #main-cont {
-        display: grid;
-        grid-template-columns: unset;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(1fr);
         grid-template-areas: none;
-        grid-template-rows: unset;
-        height: 100%;
         border: 2px solid;
+        width: 100%;
+        height: 100%;
+    }
+
+    .grid-item > img {
+        width: 100px;
+        height: 100px;
     }
 
     .grid-item {
